docs: update assets and git info

--- a/apps/docs/src/content/once-ui/basics/structure.mdx
+++ b/apps/docs/src/content/once-ui/basics/structure.mdx
@@ -639,8 +639,8 @@ The surface properties are designed for large layout container elements such as 
         horizontal="between"
         vertical="center"
       >
-        <Logo dark wordmark="/trademark/type-dark.svg" size="xs" href="/"/>
-        <Logo light wordmark="/trademark/type-light.svg" size="xs" href="/"/>
+        <Logo dark wordmark="/trademarks/type-dark.svg" size="xs" href="/"/>
+        <Logo light wordmark="/trademarks/type-light.svg" size="xs" href="/"/>
         <Avatar
           size="m"
           src="/images/avatar.jpg"
@@ -659,8 +659,8 @@ The surface properties are designed for large layout container elements such as 
 `<Row
     background="surface"
     border="surface">
-    <Logo dark wordmark="/trademark/type-dark.svg" size="xs"/>
-    <Logo light wordmark="/trademark/type-light.svg" size="xs"/>
+    <Logo dark wordmark="/trademarks/type-dark.svg" size="xs"/>
+    <Logo light wordmark="/trademarks/type-light.svg" size="xs"/>
     <Avatar/>
 </Row>`,
       language: "tsx",
