--- a/apps/docs/src/content/once-ui/components/logoCloud.mdx
+++ b/apps/docs/src/content/once-ui/components/logoCloud.mdx
@@ -18,12 +18,12 @@ The `LogoCloud` component is used to display a collection of logos in a grid lay
       <LogoCloud
         dark
         logos={[
-          { wordmark: "/trademark/type-dark.svg", size: "m" },
-          { wordmark: "/trademark/type-dark.svg", size: "m" },
-          { wordmark: "/trademark/type-dark.svg", size: "m" },
-          { wordmark: "/trademark/type-dark.svg", size: "m" },
-          { wordmark: "/trademark/type-dark.svg", size: "m" },
-          { wordmark: "/trademark/type-dark.svg", size: "m" }
+          { wordmark: "/trademarks/type-dark.svg", size: "m" },
+          { wordmark: "/trademarks/type-dark.svg", size: "m" },
+          { wordmark: "/trademarks/type-dark.svg", size: "m" },
+          { wordmark: "/trademarks/type-dark.svg", size: "m" },
+          { wordmark: "/trademarks/type-dark.svg", size: "m" },
+          { wordmark: "/trademarks/type-dark.svg", size: "m" }
         ]}
         columns="2"
         gap="16"
@@ -32,12 +32,12 @@ The `LogoCloud` component is used to display a collection of logos in a grid lay
       <LogoCloud
         light
         logos={[
-          { wordmark: "/trademark/type-light.svg", size: "m" },
-          { wordmark: "/trademark/type-light.svg", size: "m" },
-          { wordmark: "/trademark/type-light.svg", size: "m" },
-          { wordmark: "/trademark/type-light.svg", size: "m" },
-          { wordmark: "/trademark/type-light.svg", size: "m" },
-          { wordmark: "/trademark/type-light.svg", size: "m" }
+          { wordmark: "/trademarks/type-light.svg", size: "m" },
+          { wordmark: "/trademarks/type-light.svg", size: "m" },
+          { wordmark: "/trademarks/type-light.svg", size: "m" },
+          { wordmark: "/trademarks/type-light.svg", size: "m" },
+          { wordmark: "/trademarks/type-light.svg", size: "m" },
+          { wordmark: "/trademarks/type-light.svg", size: "m" }
         ]}
         columns="2"
         gap="16"
@@ -50,12 +50,12 @@ The `LogoCloud` component is used to display a collection of logos in a grid lay
       code:
 `<LogoCloud 
     logos={[
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" }
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" }
     ]}
     columns="2"
     gap="16"
@@ -77,12 +77,12 @@ When you have more logos than the limit allows, the LogoCloud will automatically
   preview={
     <LogoCloud 
       logos={[
-        { wordmark: "/trademark/type-dark.svg", size: "m" },
-        { wordmark: "/trademark/type-dark.svg", size: "m" },
-        { wordmark: "/trademark/type-dark.svg", size: "m" },
-        { wordmark: "/trademark/type-dark.svg", size: "m" },
-        { wordmark: "/trademark/type-dark.svg", size: "m" },
-        { wordmark: "/trademark/type-dark.svg", size: "m" }
+        { wordmark: "/trademarks/type-dark.svg", size: "m" },
+        { wordmark: "/trademarks/type-dark.svg", size: "m" },
+        { wordmark: "/trademarks/type-dark.svg", size: "m" },
+        { wordmark: "/trademarks/type-dark.svg", size: "m" },
+        { wordmark: "/trademarks/type-dark.svg", size: "m" },
+        { wordmark: "/trademarks/type-dark.svg", size: "m" }
       ]}
       limit={6}
       rotationInterval={3000}
@@ -95,12 +95,12 @@ When you have more logos than the limit allows, the LogoCloud will automatically
       code:
 `<LogoCloud 
     logos={[
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" },
-      { wordmark: "/trademark/type-dark.svg", size: "m" }
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" },
+      { wordmark: "/trademarks/type-dark.svg", size: "m" }
     ]}
     limit={6}
     rotationInterval={3000}
@@ -123,12 +123,12 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
   preview={
     <LogoCloud 
       logos={[
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" }
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" }
       ]}
       columns="4"
       s={{columns: 2}}
@@ -140,12 +140,12 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
       code:
 `<LogoCloud 
     logos={[
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" },
-        { wordmark: "/trademark/type-dark.svg", size: "s" }
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" },
+        { wordmark: "/trademarks/type-dark.svg", size: "s" }
     ]}
     columns="4"
     s={{columns: 2}}
