--- a/apps/docs/src/content/once-ui/effects/matrixFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/matrixFx.mdx
@@ -285,8 +285,8 @@ Use `trigger="hover"` for native hover support. Dots progressively appear on hov
           }}
           pointerEvents="none"/>
         <Column align="center" horizontal="center" pointerEvents="none">
-          <Logo dark icon="/trademark/icon-dark.svg" />
-          <Logo light icon="/trademark/icon-light.svg" />
+          <Logo dark icon="/trademarks/icon-dark.svg" />
+          <Logo light icon="/trademarks/icon-light.svg" />
         </Column>
       </Row>
       <Row
@@ -320,8 +320,8 @@ Use `trigger="hover"` for native hover support. Dots progressively appear on hov
           }}
           pointerEvents="none"/>
         <Column align="center" horizontal="center" pointerEvents="none">
-          <Logo dark icon="/trademark/icon-dark.svg" />
-          <Logo light icon="/trademark/icon-light.svg" />
+          <Logo dark icon="/trademarks/icon-dark.svg" />
+          <Logo light icon="/trademarks/icon-light.svg" />
         </Column>
       </Row>
     </Row>
@@ -360,8 +360,8 @@ Use `trigger="hover"` for native hover support. Dots progressively appear on hov
       }}
       pointerEvents="none"/>
     <Column align="center" horizontal="center" pointerEvents="none">
-      <Logo dark icon="/trademark/icon-dark.svg" />
-      <Logo light icon="/trademark/icon-light.svg" />
+      <Logo dark icon="/trademarks/icon-dark.svg" />
+      <Logo light icon="/trademarks/icon-light.svg" />
     </Column>
 </Row>
 <Row
@@ -395,8 +395,8 @@ Use `trigger="hover"` for native hover support. Dots progressively appear on hov
       }}
       pointerEvents="none"/>
     <Column align="center" horizontal="center" pointerEvents="none">
-      <Logo dark icon="/trademark/icon-dark.svg" />
-      <Logo light icon="/trademark/icon-light.svg" />
+      <Logo dark icon="/trademarks/icon-dark.svg" />
+      <Logo light icon="/trademarks/icon-light.svg" />
     </Column>
 </Row>`,
       language: "tsx",
