--- a/apps/docs/src/content/once-ui/components/autoScroll.mdx
+++ b/apps/docs/src/content/once-ui/components/autoScroll.mdx
@@ -16,12 +16,12 @@ The `AutoScroll` component provides an infinite scrollable container that automa
   previewPadding="0"
   preview={
     <AutoScroll paddingY="40">
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
     </AutoScroll>
   }
   codes={[
@@ -51,12 +51,12 @@ The `speed` prop controls the speed of the scrolling.
   previewPadding="0"
   preview={
     <AutoScroll paddingY="40" speed="fast">
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
-      <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="/"/>
-      <Logo light wordmark="/trademark/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
+      <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="/"/>
+      <Logo light wordmark="/trademarks/type-light.svg" size="s" href="/"/>
     </AutoScroll>
   }
   codes={[
@@ -88,12 +88,12 @@ Combine with the `<Fade>` component to create a fade-in and fade-out effect.
     <>
       <Fade zIndex="1" to="right" fillHeight width="64" position="absolute" left="0" top="0" pointerEvents="none"/>
       <AutoScroll paddingY="40">
-        <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="#"/>
-        <Logo light wordmark="/trademark/type-light.svg" size="s" href="#"/>
-        <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="#"/>
-        <Logo light wordmark="/trademark/type-light.svg" size="s" href="#"/>
-        <Logo dark wordmark="/trademark/type-dark.svg" size="s" href="#"/>
-        <Logo light wordmark="/trademark/type-light.svg" size="s" href="#"/>
+        <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="#"/>
+        <Logo light wordmark="/trademarks/type-light.svg" size="s" href="#"/>
+        <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="#"/>
+        <Logo light wordmark="/trademarks/type-light.svg" size="s" href="#"/>
+        <Logo dark wordmark="/trademarks/type-dark.svg" size="s" href="#"/>
+        <Logo light wordmark="/trademarks/type-light.svg" size="s" href="#"/>
       </AutoScroll>
       <Fade zIndex="1" to="left" fillHeight width="64" position="absolute" right="0" top="0" pointerEvents="none"/>
     </>
