--- a/apps/docs/src/content/once-ui/components/animation.mdx
+++ b/apps/docs/src/content/once-ui/components/animation.mdx
@@ -20,31 +20,31 @@ The `Animation` component provides a simple way to add animations to any element
       <Animation fade={0} triggerType="hover" center
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Trigger fade</Text>
+            Trigger fade
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Text variant="label-default-s">Fade</Text>
+          Fade
         </Row>
       </Animation>
       <Animation scale={0.8} triggerType="hover" center
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Trigger scale</Text>
+            Trigger scale
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Text variant="label-default-s">Scale</Text>
+          Scale
         </Row>
       </Animation>
       <Animation slideUp={1.5} triggerType="hover" center
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Trigger slide</Text>
+            Trigger slide
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Text variant="label-default-s">Slide</Text>
+          Slide
         </Row>
       </Animation>
     </Row>
@@ -57,40 +57,40 @@ The `Animation` component provides a simple way to add animations to any element
 `<Animation fade={0} triggerType="hover" center
     trigger={
       <Row padding="16" radius="m" border="neutral-medium" fit>
-        <Text>Trigger fade</Text>
+        Trigger fade
       </Row>
     }>
     <Row padding="l" radius="m" background="page" border="neutral-medium" center>
-      <Text>Fade</Text>
+      Fade
     </Row>
 </Animation>
 
 <Animation scale={0.8} triggerType="hover" center
     trigger={
       <Row padding="16" radius="m" border="neutral-medium" fit>
-        <Text>Trigger scale</Text>
+        Trigger scale
       </Row>
     }>
     <Row padding="l" radius="m" background="page" border="neutral-medium" center>
-      <Text>Scale</Text>
+      Scale
     </Row>
 </Animation>
 
 <Animation slideUp={1.5} triggerType="hover" center
     trigger={
       <Row padding="16" radius="m" border="neutral-medium" fit>
-        <Text>Trigger slide</Text>
+        Trigger slide
       </Row>
     }>
     <Row padding="l" radius="m" background="page" border="neutral-medium" center>
-      <Text>Slide</Text>
+      Slide
     </Row>
 </Animation>`
     }
   ]}
 />
 
-## Animation types
+## Types
 
 All animations are value-based - the value represents the initial state, and it animates to the natural end state (`opacity: 1`, `scale: 1`, `blur: 0`, `translate: 0`).
 
@@ -102,31 +102,31 @@ All animations are value-based - the value represents the initial state, and it 
       <Animation blur={8} triggerType="hover" center duration={400}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Blur</Text>
+            Blur
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="sparkles" size="l" />
+          <Icon name="sparkle" />
         </Row>
       </Animation>
       <Animation zoomIn={1.2} triggerType="hover" center duration={400}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Zoom in</Text>
+            Zoom in
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="search" size="l" />
+          <Icon name="search" />
         </Row>
       </Animation>
       <Animation slideUp={1.5} triggerType="hover" center duration={400}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Slide up</Text>
+            Slide up
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="arrowUp" size="l" />
+          <Icon name="arrowUp" />
         </Row>
       </Animation>
     </Row>
@@ -136,26 +136,35 @@ All animations are value-based - the value represents the initial state, and it 
       language: "tsx",
       label: "Types",
       code:
-`<Animation blur={8} triggerType="hover" center
-  trigger={
-    <Row padding="16" radius="m" border="neutral-medium" fit>
-      <Text>Blur</Text>
+`<Animation blur={8} triggerType="hover" center duration={400}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Blur
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      <Icon name="sparkle" />
     </Row>
-  }>
-  <Row padding="l" radius="m" background="page" border="neutral-medium" center>
-    <Icon name="sparkles" size="l" />
-  </Row>
 </Animation>
-
-<Animation zoomIn={0} triggerType="hover" center
-  trigger={
-    <Row padding="16" radius="m" border="neutral-medium" fit>
-      <Text>Zoom in</Text>
+<Animation zoomIn={1.2} triggerType="hover" center duration={400}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Zoom in
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      <Icon name="search" />
     </Row>
-  }>
-  <Row padding="l" radius="m" background="page" border="neutral-medium" center>
-    <Icon name="search" size="l" />
-  </Row>
+</Animation>
+<Animation slideUp={1.5} triggerType="hover" center duration={400}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Slide up
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      <Icon name="arrowUp" />
+    </Row>
 </Animation>`
     }
   ]}
@@ -184,33 +193,31 @@ import { useState } from "react";
 import { Animation, NavIcon, Dropdown, Option } from "@once-ui-system/core";
 
 function NavIconMenu() {
-  const [isActive, setIsActive] = useState(false);
+    const [isActive, setIsActive] = useState(false);
 
-  return (
-    <Animation
-      trigger={
-        <div onClick={() => setIsActive(!isActive)}>
-          <NavIcon isActive={isActive} />
-        </div>
-      }
-      slideDown={1}
-      triggerType="manual"
-      active={isActive}
-      duration={300}
-    >
-      <Dropdown position="absolute" top="48" padding="4" gap="2" radius="l">
-        <Option label="Option 1" onClick={() => setIsActive(false)} />
-        <Option label="Option 2" onClick={() => setIsActive(false)} />
-        <Option label="Option 3" onClick={() => setIsActive(false)} />
-      </Dropdown>
-    </Animation>
-  );
+    return (
+      <Animation
+        trigger={
+          <NavIcon onClick={() => setIsActive(!isActive)} isActive={isActive} />
+        }
+        slideDown={1}
+        triggerType="manual"
+        active={isActive}
+        duration={300}
+      >
+        <Dropdown position="absolute" top="48" padding="4" gap="2" radius="l">
+          <Option label="Option 1" onClick={() => setIsActive(false)} />
+          <Option label="Option 2" onClick={() => setIsActive(false)} />
+          <Option label="Option 3" onClick={() => setIsActive(false)} />
+        </Dropdown>
+      </Animation>
+    );
 }`
     }
   ]}
 />
 
-## Easing curves
+## Easing
 
 Customize animation feel with different easing curves: `linear`, `ease`, `ease-in`, `ease-out`, `ease-in-out`, `spring`, `bounce`.
 
@@ -222,31 +229,31 @@ Customize animation feel with different easing curves: `linear`, `ease`, `ease-i
       <Animation scale={0.8} triggerType="hover" easing="spring" center duration={500}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Spring</Text>
+            Spring
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="zap" size="l" />
+          Spring easing
         </Row>
       </Animation>
       <Animation scale={0.8} triggerType="hover" easing="bounce" center duration={500}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Bounce</Text>
+            Bounce
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="activity" size="l" />
+          Bounce easing
         </Row>
       </Animation>
       <Animation scale={0.8} triggerType="hover" easing="ease-in-out" center duration={500}
         trigger={
           <Row padding="16" radius="m" border="neutral-medium" fit>
-            <Text variant="label-default-s">Ease</Text>
+            Ease
           </Row>
         }>
         <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
-          <Icon name="trendingUp" size="l" />
+          Ease easing
         </Row>
       </Animation>
     </Row>
@@ -256,8 +263,35 @@ Customize animation feel with different easing curves: `linear`, `ease`, `ease-i
       language: "tsx",
       label: "Easing",
       code:
-`<Animation scale={0.8} triggerType="hover" easing="spring" duration={500}>
-  <Row>Spring easing</Row>
+`<Animation scale={0.8} triggerType="hover" easing="spring" center duration={500}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Spring
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      Spring easing
+    </Row>
+</Animation>
+<Animation scale={0.8} triggerType="hover" easing="bounce" center duration={500}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Bounce
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      Bounce easing
+    </Row>
+</Animation>
+<Animation scale={0.8} triggerType="hover" easing="ease-in-out" center duration={500}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        Ease
+      </Row>
+    }>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      Ease easing
+    </Row>
 </Animation>`
     }
   ]}
@@ -312,16 +346,38 @@ When used without a trigger, animations apply directly to the element.
       language: "tsx",
       label: "Card",
       code:
-`<Animation scale={0.95} triggerType="hover">
-  <Card padding="l" direction="column" gap="12">
-    <Icon name="heart" size="l" />
-    <Column gap="4">
-      <Text variant="heading-strong-m">Hover Card</Text>
-      <Text onBackground="neutral-weak" variant="body-default-s">
-        This card animates on hover.
-      </Text>
-    </Column>
-  </Card>
+`<Animation fade={0.4} triggerType="hover" duration={300}>
+    <Card padding="l" direction="column" gap="12" fillWidth radius="l">
+      <Icon name="heart" size="l" />
+      <Column gap="4">
+        <Text variant="heading-strong-m">Fade in</Text>
+        <Text onBackground="neutral-weak" variant="body-default-s">
+          Fade in on hover
+        </Text>
+      </Column>
+    </Card>
+</Animation>
+<Animation zoomOut={1.1} fade={1} triggerType="hover" duration={300}>
+    <Card padding="l" direction="column" gap="12" fillWidth radius="l" href="#">
+      <Icon name="star" size="l" />
+      <Column gap="4">
+        <Text variant="heading-strong-m">Zoom Card</Text>
+        <Text onBackground="neutral-weak" variant="body-default-s">
+          Scale up on hover
+        </Text>
+      </Column>
+    </Card>
+</Animation>
+<Animation blur={16} fade={1} triggerType="hover" duration={300}>
+    <Card padding="l" direction="column" gap="12" fillWidth radius="l">
+      <Icon name="star" size="l" />
+      <Column gap="4">
+        <Text variant="heading-strong-m">Blur</Text>
+        <Text onBackground="neutral-weak" variant="body-default-s">
+          Reveal on hover
+        </Text>
+      </Column>
+    </Card>
 </Animation>`
     }
   ]}
@@ -335,31 +391,29 @@ Enable portal rendering to display animated content in a positioned overlay usin
   marginTop="16"
   marginBottom="24"
   preview={
-    <Row fillWidth horizontal="center">
-      <Animation
-        triggerType="hover"
-        portal
-        placement="top-end"
-        fade={0}
-        slideUp={1}
-        scale={0.8}
-        duration={200}
-        trigger={
-          <Button variant="secondary" href="#">
-            Hover for portal
-          </Button>
-        }
-      >
-        <Card padding="m" radius="l" maxWidth={20}>
-          <Column gap="8">
-            <Text variant="heading-strong-s">Portal Content</Text>
-            <Text variant="body-default-s" onBackground="neutral-weak">
-              This renders in a portal with Floating UI positioning!
-            </Text>
-          </Column>
-        </Card>
-      </Animation>
-    </Row>
+    <Animation
+      triggerType="hover"
+      portal
+      placement="top-end"
+      fade={0}
+      slideUp={1}
+      scale={0.8}
+      duration={200}
+      trigger={
+        <Button variant="secondary" href="#">
+          Hover for portal
+        </Button>
+      }
+    >
+      <Card padding="m" radius="l" maxWidth={20}>
+        <Column gap="8">
+          <Text variant="heading-strong-s">Portal Content</Text>
+          <Text variant="body-default-s" onBackground="neutral-weak">
+            This renders in a portal with Floating UI positioning!
+          </Text>
+        </Column>
+      </Card>
+    </Animation>
   }
   codes={[
     {
@@ -367,20 +421,27 @@ Enable portal rendering to display animated content in a positioned overlay usin
       label: "Portal",
       code:
 `<Animation
-  triggerType="hover"
-  portal
-  placement="top"
-  fade={0}
-  scale={0.95}
-  trigger={
-    <Button variant="secondary">
-      Hover for portal
-    </Button>
-  }
->
-  <Card padding="m" radius="l">
-    <Text>Portal Content</Text>
-  </Card>
+    triggerType="hover"
+    placement="top-end"
+    portal
+    fade={0}
+    slideUp={1}
+    scale={0.8}
+    duration={200}
+    trigger={
+      <Button variant="secondary" href="#">
+        Hover for portal
+      </Button>
+    }
+  >
+    <Card padding="m" radius="l" maxWidth={20}>
+      <Column gap="8">
+        <Text variant="heading-strong-s">Portal Content</Text>
+        <Text variant="body-default-s" onBackground="neutral-weak">
+          This renders in a portal with Floating UI positioning!
+        </Text>
+      </Column>
+    </Card>
 </Animation>`
     }
   ]}
@@ -436,22 +497,37 @@ Stack multiple animations by providing multiple props. Each value represents the
       label: "Custom",
       code:
 `<Animation 
-  fade={0}
-  scale={0.8}
-  triggerType="hover" 
-  duration={400}
-  trigger={<Row>Trigger</Row>}
+    fade={0}
+    scale={0.8}
+    triggerType="hover" 
+    center
+    duration={400}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        <Text variant="label-default-s">Fade + Scale</Text>
+      </Row>
+    }
 >
-  <Row>Fade + Scale</Row>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      <Icon name="layers" size="l" />
+    </Row>
 </Animation>
-
 <Animation 
-  blur={10}
-  scale={0.85}
-  slideUp={1}
-  triggerType="hover"
+    blur={10}
+    scale={0.85}
+    slideUp={1}
+    triggerType="hover" 
+    center
+    duration={400}
+    trigger={
+      <Row padding="16" radius="m" border="neutral-medium" fit>
+        <Text variant="label-default-s">Blur + Scale + Slide</Text>
+      </Row>
+    }
 >
-  <Row>Blur + Scale + Slide</Row>
+    <Row padding="l" radius="m" background="page" border="neutral-medium" center width="128" height="128">
+      <Icon name="sparkles" size="l" />
+    </Row>
 </Animation>`
     }
   ]}
@@ -461,30 +537,29 @@ Stack multiple animations by providing multiple props. Each value represents the
 
 <PropsTable
   content={[
-    ["trigger", "ReactNode", "Optional trigger element (e.g., NavIcon, Button) that controls the animation"],
-    ["children", "ReactNode", "Content to animate"],
-    ["fade", "number", "Initial opacity (0-1). Animates to 1"],
-    ["scale", "number", "Initial scale value. Animates to 1"],
-    ["blur", "number", "Initial blur in px. Animates to 0"],
-    ["slideUp", "number", "Initial distance below in rem. Animates to 0"],
-    ["slideDown", "number", "Initial distance above in rem. Animates to 0"],
-    ["slideLeft", "number", "Initial distance right in rem. Animates to 0"],
-    ["slideRight", "number", "Initial distance left in rem. Animates to 0"],
-    ["zoomIn", "number", "Initial scale (zooming in). Animates to 1"],
-    ["zoomOut", "number", "Initial scale (zooming out). Animates to 1"],
-    ["triggerType", "'hover' | 'click' | 'manual'", "How to trigger the animation (default: 'manual')"],
-    ["active", "boolean", "Control animation state when triggerType='manual'"],
-    ["delay", "number", "Delay before animation starts in ms (default: 0)"],
-    ["duration", "number", "Animation duration in ms (default: 300)"],
-    ["easing", "EasingCurve", "Easing curve: 'linear', 'ease', 'ease-in', 'ease-out', 'ease-in-out', 'spring', 'bounce' (default: 'ease-out')"],
-    ["transformOrigin", "string", "CSS transform-origin value (default: 'center')"],
-    ["portal", "boolean", "Render content in a portal with Floating UI positioning (default: false)"],
-    ["placement", "Placement", "Position for portal mode: 'top', 'bottom', 'left', 'right', etc. (default: 'top')"],
-    ["offsetDistance", "number", "Distance from trigger in pixels for portal mode (default: 8)"],
-    ["distance", "number", "Distance for slide animations in px (default: 20)"],
-    ["scale", "number", "Scale value for scale animations (default: 0.95)"],
-    ["blur", "number", "Blur amount in px for blur animation (default: 4)"],
-    ["reverse", "boolean", "Reverse the animation direction (default: false)"],
+    ["trigger", "ReactNode"],
+    ["fade", "number"],
+    ["scale", "number"],
+    ["blur", "number"],
+    ["slideUp", "number"],
+    ["slideDown", "number"],
+    ["slideLeft", "number"],
+    ["slideRight", "number"],
+    ["zoomIn", "number"],
+    ["zoomOut", "number"],
+    ["triggerType", ["hover", "click", "manual"], "manual"],
+    ["active", "boolean", "false"],
+    ["delay", "number", "0"],
+    ["duration", "number", "300"],
+    ["easing", "EasingCurve", "ease-out"],
+    ["transformOrigin", "string", "center"],
+    ["portal", "boolean", "false"],
+    ["placement", "Placement", "top"],
+    ["offsetDistance", "number", "8"],
+    ["scale", "number"],
+    ["blur", "number"],
+    ["reverse", "boolean"],
+    ["children"],
     ["...flex"]
   ]}
 />
