docs: add AR to media in WeatherFx

--- a/apps/docs/src/content/once-ui/effects/weatherFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/weatherFx.mdx
@@ -20,6 +20,7 @@ The `WeatherFx` component creates animated weather effects using the native Canv
     <>
       <Media
         priority
+        aspectRatio="16/9"
         src="/images/docs/once-ui/vibe-coding-light.jpg"
         alt="Preview"
       />
