--- a/apps/docs/src/content/once-ui/components/media.mdx
+++ b/apps/docs/src/content/once-ui/components/media.mdx
@@ -15,6 +15,7 @@ navIcon: "components"
   marginBottom="24"
   preview={
     <Media
+      priority
       src="/images/docs/once-ui/vibe-coding-light.jpg"
       alt="Preview"
       radius="xl"
