fix(ui,docs): normalize `isOpen` handling + fix Input placeholder/label; tidy quotes
- Normalize `isOpen` prop behavior across interactive components and docs/examples
  (consistent controlled/uncontrolled behavior, SSR-safe defaults).
  Touched: Dialog.tsx, DialogExample.tsx, dialog.mdx,
           DropdownWrapper.tsx, DropdownWrapperExample.tsx, dropdownWrapper.mdx,
           ContextMenu.tsx, Select.tsx, Kbar.tsx, ComponentsCheckPage.tsx

- Input: resolve placeholder/label overlap + ID wiring
  - Correct label/placeholder interaction and focus/blur states
  - Ensure `htmlFor` ↔ `id` pairing; improve a11y (`aria-*`)
  - Styling tweaks in Input.module.scss; updated examples
  Touched: Input.module.scss, InputExamples.tsx, TextareaExamples.tsx

- Misc cleanups
  - Quote consistency (`'` → `"` where needed), minor TS/prop nits
  - Example + demo updates (Countdown/Count/TypeFx, Date* pickers, CTA, Button, etc.)
  Touched: Accordion.tsx, Button.tsx, ChartHeader.tsx, CountdownFxExample.tsx,
           CountFxExample.tsx, Cta.tsx, DateInput.tsx, DatePicker.tsx,
           DatePickerExamples.tsx, DateRangeInput.tsx, emojiPickerDropdown.mdx,
           EmojiPickerDropdownExample.tsx, error.tsx, Select.tsx,
           ToastExample.tsx, TypeFxCustomExample.tsx

No breaking changes expected.

--- a/apps/docs/src/content/once-ui/components/dialog.mdx
+++ b/apps/docs/src/content/once-ui/components/dialog.mdx
@@ -31,7 +31,7 @@ return (
         Open Dialog
       </Button>
       <Dialog
-        isOpen={isOpen}
+        open={isOpen}
         onClose={() => setIsOpen(false)}
         title="Basic dialog"
         description="This is a simple dialog with a title and description."
@@ -76,7 +76,7 @@ return (
         Dialog with footer
       </Button>
       <Dialog
-        isOpen={isOpen}
+        open={isOpen}
         onClose={() => setIsOpen(false)}
         title="Dialog with footer"
         footer={
@@ -126,7 +126,7 @@ return (
       </Button>
       
       <Dialog
-        isOpen={isBaseOpen}
+        open={isBaseOpen}
         onClose={() => setIsBaseOpen(false)}
         title="Base dialog"
         base={isStackedOpen}
@@ -147,7 +147,7 @@ return (
       </Dialog>
       
       <Dialog
-        isOpen={isStackedOpen}
+        open={isStackedOpen}
         onClose={() => setIsStackedOpen(false)}
         title="Stacked dialog"
         stack
@@ -189,7 +189,7 @@ return (
         Customized dialog
       </Button>
       <Dialog
-        isOpen={isOpen}
+        open={isOpen}
         onClose={() => setIsOpen(false)}
         title="Customized dialog"
         maxWidth={48}
@@ -231,7 +231,7 @@ The Dialog component follows accessibility best practices:
 
 <PropsTable
   content={[
-    ["isOpen", "boolean", "false"],
+    ["open", "boolean", "false"],
     ["onClose", "() => void"],
     ["title", "ReactNode | string"],
     ["description", "ReactNode"],
