--- a/apps/docs/src/content/once-ui/components/emojiPickerDropdown.mdx
+++ b/apps/docs/src/content/once-ui/components/emojiPickerDropdown.mdx
@@ -204,7 +204,7 @@ const [selectedEmoji, setSelectedEmoji] = useState("");
   <EmojiPickerDropdown
     trigger={<Button label="Controlled Dropdown" />}
     onSelect={(emoji) => setSelectedEmoji(emoji)}
-    isOpen={isOpen}
+    open={isOpen}
     onOpenChange={setIsOpen}
   />
   <Button 
